--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -9,20 +9,20 @@
       name: mongodb-org-shell
       state: present
 
-  - name: "get the {{component}} entries count"
+  - name: "get the catalogue entries count"
     ansible.builtin.shell: mongo --host mongodb.forpractice.uno --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
     register: entries_count
     when: component == "catalogue"
 
 
-  - name: "get the {{component}} entries count"
+  - name: "get the user entries count"
     ansible.builtin.shell: mongo --host mongodb.forpractice.uno --quiet --eval 'db = db.getSiblingDB("users"); db.users.count()'
     register: entries_count
     when: component == "user"
 
   - name: print the count
     ansible.builtin.debug: 
-      msg: "entries count: {{ component }}"
+      msg: "entries count: {{entries_count}}"
 
   - name: "load {{component}} data"
     ansible.builtin.shell: "mongo --host mongodb.forpractice.uno < /app/schema/{{component}}.js"
