--- a/roles/common/tasks/mongodb-setup.yaml
+++ b/roles/common/tasks/mongodb-setup.yaml
@@ -11,19 +11,24 @@
 
   - name: "get the catalogue entries count"
     ansible.builtin.shell: mongo --host mongodb.forpractice.uno --quiet --eval 'db = db.getSiblingDB("catalogue"); db.products.count()'
-    register: entries_count
+    register: products_count
     when: component == "catalogue"
 
 
   - name: "get the user entries count"
     ansible.builtin.shell: mongo --host mongodb.forpractice.uno --quiet --eval 'db = db.getSiblingDB("users"); db.users.count()'
-    register: entries_count
+    register: users_count
     when: component == "user"
 
-  - name: print the count
-    ansible.builtin.debug: 
-      msg: "entries count: {{entries_count}}"
+  # - name: print the count
+  #   ansible.builtin.debug: 
+  #     msg: "entries count: {{entries_count}}"
 
   - name: "load {{component}} data"
     ansible.builtin.shell: "mongo --host mongodb.forpractice.uno < /app/schema/{{component}}.js"
-    when: entries_count.stdout == "0" # keep the number in double quotes then only it considers
+    when: products_count.stdout == "0" and component == "catalogue" # keep double quotes
+  
+  - name: "load {{component}} data"
+    ansible.builtin.shell: "mongo --host mongodb.forpractice.uno < /app/schema/{{component}}.js"
+    when: users_count.stdout == "0" and component == "user" # keep double quotes
+  
