--- a/roles/common/tasks/nodejs.yaml
+++ b/roles/common/tasks/nodejs.yaml
@@ -1,12 +1,12 @@
-- name: disable old nodejs and enable nodejs18 
+- name: disable old nodejs and enable nodejs
   ansible.builtin.shell: dnf module disable nodejs -y ; dnf module enable nodejs:18 -y
 
 - name: Install nodejs
   ansible.builtin.dnf:
-    name: nodejs
+    name: nodejs 
     state: present
 
 - name: Install dependencies
-  ansible.builtin.command: npm install 
-  args: 
+  ansible.builtin.command: npm install
+  args:
     chdir: /app
