--- a/roles/common/tasks/systemd.yaml
+++ b/roles/common/tasks/systemd.yaml
@@ -1,14 +1,14 @@
-# - name: "copy {{component}} service"
+# - name: "Copy {{component}} service"
 #   ansible.builtin.copy:
 #     src: "{{component}}.service"
 #     dest: "/etc/systemd/system/{{component}}.service"
 
-- name: "copy {{component}} service"
+- name: "Copy {{component}} service"
   ansible.builtin.template:
     src: "{{component}}.service.j2"
     dest: "/etc/systemd/system/{{component}}.service"
 
-- name: daemon reload and start
+- name: deamon realod and start
   ansible.builtin.systemd_service:
     daemon_reload: true
 
