--- a/roles/shipping/tasks/main.yaml
+++ b/roles/shipping/tasks/main.yaml
@@ -1,14 +1,14 @@
-- name: app-setup 
+- name: app setup
   ansible.builtin.import_role:
     name: common
     tasks_from: app-setup
 
-- name: java 
+- name: java
   ansible.builtin.import_role:
     name: common
     tasks_from: java
 
-- name: mysql-setup 
+- name: mysql setup
   ansible.builtin.import_role:
     name: common
     tasks_from: mysql-setup
