--- a/roles/common/tasks/mysql-setup.yaml
+++ b/roles/common/tasks/mysql-setup.yaml
@@ -11,6 +11,14 @@
   ansible.builtin.debug:
     msg: "schema output: {{schema}}"
 
-- name: load cities data
-  ansible.builtin.shell: "mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}}  < /app/schema/shipping.sql"
+- name: Load schema.sql into MySQL
+  ansible.builtin.shell: "mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}} < /app/db/schema.sql"
+  when: schema.stdout != "1"
+
+- name: Load app-user.sql into MySQL
+  ansible.builtin.shell: "mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}} < /app/db/app-user.sql"
+  when: schema.stdout != "1"
+
+- name: Load master-data.sql into MySQL
+  ansible.builtin.shell: "mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}} < /app/db/master-data.sql"
   when: schema.stdout != "1"
