--- a/roles/redis/tasks/main.yaml
+++ b/roles/redis/tasks/main.yaml
@@ -1,3 +1,12 @@
+- name: install remi release
+  ansible.builtin.dnf: # check pacakge will work not
+    name: https://rpms.remirepo.net/enterprise/remi-release-8.rpm
+    state: present
+    disable_gpg_check: true
+
+- name: enable redis
+  ansible.builtin.command: dnf module enable redis:remi-6.2 -y
+
 - name: install redis
   ansible.builtin.dnf:
     name: redis
