--- a/roles/common/tasks/mysql-setup.yaml
+++ b/roles/common/tasks/mysql-setup.yaml
@@ -12,5 +12,8 @@
     msg: "schema output: {{schema}}"
 
 - name: load cities data
-  ansible.builtin.shell: "mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}}  < /app/schema/shipping.sql"
+  ansible.builtin.shell: |
+    mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}} < /app/db/schema.sql
+    mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}} < /app/db/app-user.sql
+    mysql -h {{MYSQL_HOST}} -uroot -p{{mysql_password}} < /app/db/master-data.sql
   when: schema.stdout != "1"
