roboshop-ansible-roles changes

--- a/inventory.ini
+++ b/inventory.ini
@@ -18,6 +18,8 @@ shipping.forpractice.uno
 rabbitmq.forpractice.uno
 [payment]
 payment.forpractice.uno
+[dispatch]
+dispatch.forpractice.uno
 
 [all:vars]
 ansible_password=DevOps321
